# stapeln

./: .gitignore  ABI-FFI-README.md  ACCESSIBILITY.md  ARCHITECTURE.md  ATTACK-SURFACE-GAPS.md  CODE_OF_CONDUCT.md  CONTAINER-HATER-TEST.md  DATABASE-AND-DOCS-INTEGRATION.md  ECOSYSTEM.scm  FIREWALL-CONFIG.md  IMPLEMENTATION-PLAN.md  LAGO-GREY-INTEGRATION.md  META.scm  OBVIOUS-VULNERABILITIES.md  PAGES.md  PROVEN-LIBRARIES.md  README.adoc  RED-TEAM-EXERCISE.md  REKOR.md  ROADMAP.adoc  ROADMAP.md  SECURITY-REASONING-ENGINE.md  SECURITY-STACK-AUDIT.md  SECURITY.md  SESSION-PICKUP-2026-03-21.md  SESSION-SUMMARY-2026-02-05.md  SETUP.md  SONNET-TASKS.md  STATE.scm  STATUS.md  TOPOLOGY.md  UI-DEMO-V3.html  UI-DEMO.html  UI-MOCKUPS.md  URGENT-RESCRIPT-MIGRATION.md  UX-MANIFESTO.md  VERIFICATION-SPEC.md  arcvix-logic-driven-container-security.tex  stapeln-ui.html
container-stack/cerro-torre/: .editorconfig  .gitignore  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  CLAUDE.md  COMPLETION-PLAN.md  Cargo.toml  Containerfile  E2E-TEST-RESULTS.md  IMPLEMENTATION-STATUS.md  KEYGEN-PROGRESS-2026-02-05.md  LICENSE-AGPL  LICENSE-MIT  MVP.adoc  README.adoc  README.md  RSR_OUTLINE.adoc  RUST-SIGNING-MIGRATION.md  SECURITY-AUDIT-2026-01-25.md  SECURITY-FIXES-SUMMARY.md  SESSION-COMPLETE-2026-01-25.md  SESSION-CONTINUATION-2026-01-25.md  SESSION-LIVE-TESTING-2026-01-25.md  SESSION-PHASE3-START-2026-01-25.md  SESSION-PUSH-COMPLETE-2026-01-25.md  SESSION-SUMMARY-2026-01-25.md  STATUS-2026-02-05.md  TRANSPARENCY-LOG-STATUS.md  alire.toml  cerro_torre.gpr  justfile  mustfile.toml
container-stack/cerro-torre/.github/: dependabot.yml
container-stack/cerro-torre/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
container-stack/cerro-torre/cerro_torre_stack/: CNAME  ECOSYSTEM.scm  META.scm  README.adoc  README.md  SECURITY-SETUP.md  STATE.scm  ads.txt  app-ads.txt  humans.txt  mix.exs  test_both_modes.sh
container-stack/cerro-torre/containerfiles/: README.adoc  ct-a.containerfile  ct-i.containerfile  ct.containerfile
container-stack/cerro-torre/containerfiles-extreme/: README.adoc  X-ct-a.containerfile  X-ct-i.containerfile  X-ct.containerfile
container-stack/cerro-torre/containerfiles-research/: R-ct-a.containerfile  R-ct-i.containerfile  R-ct.containerfile  README.adoc
container-stack/cerro-torre/docs/: A2ML-CLI-INTEGRATION.adoc  A2ML-INTEGRATION.adoc  ARCHITECTURE.md  CITATIONS.adoc  EVALUATION-REPORT.adoc  MISSING-SECURITY-COMPONENTS.adoc  MVP-PLAN.md  OUTSTANDING-WORK.md  QOL-AUDIT.adoc  ROADMAP.adoc  ROADMAP.md  SECURITY-STANDARDS-BY-COMPONENT.adoc  SECURITY-STANDARDS-COMPARISON.adoc  WORDPRESS-SECURITY-STACK.md  crypto-suites.adoc  sfc-inquiry-draft.md
container-stack/cerro-torre/examples/: policy-enterprise.json  policy-strict.json  policy.json
container-stack/cerro-torre/governance/: articles.md  covenant.md
container-stack/cerro-torre/keys/: .gitkeep  trust.toml.example
container-stack/cerro-torre/license/: PMPL-1.0.txt
container-stack/cerro-torre/manifests/: hello.ctp.example
container-stack/cerro-torre/spec/: build-summary.md  cli-ergonomics.adoc  crypto-suites.json  index-schema.json  keystore-nongoals.adoc  keystore-policy.json  keystore-policy.schema.json  keystore-summary.schema.json  manifest-canonicalization.adoc  manifest-format.md  mvp-manifest.md  policy-schema.json  provenance-chain.md  (+6 more)
container-stack/selur/: .editorconfig  ANNOUNCEMENT-v1.0.0.md  Cargo.toml  README.adoc  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-v1.0.0.md  RELEASE-SUMMARY.md  ROADMAP.adoc  SECURITY-AUDIT-2026-01-25.md  create-release-v2.sh  create-release.sh  justfile
(+1238 files in other folders)
