# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "selur-compose"
version = "0.1.0"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
edition = "2021"
license = "PMPL-1.0-or-later"
description = "Multi-container orchestration for verified containers (.ctp bundles)"
repository = "https://github.com/hyperpolymath/selur-compose"
keywords = ["containers", "orchestration", "compose", "verification", "zero-copy"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "selur-compose"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Configuration parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Graph algorithms (dependency resolution)
petgraph = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.4"
sha2 = "0.10"

# Process execution
which = "6.0"

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Terminal UI
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
axum = { version = "0.6", features = ["json"] }
tower = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
